[package]
name = "naivechain-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
serde = {version="1.0.126", features = ["derive"]}
serde_json = "1.0.64"
byteorder = "1.4.3"
lazy_static = "1.4.0"
actix-web = "3"
